# libpptx

./: Makefile.am  README.md  configure.ac  libpptx.pc.in
include/: pptx.h
include/private/: pptx-any.h  pptx-common.h  pptx-ct-a-adj-point-2d.h  pptx-ct-a-adjust-handle-list.h  pptx-ct-a-alpha-bi-level-effect.h  pptx-ct-a-alpha-ceiling-effect.h  pptx-ct-a-alpha-floor-effect.h  pptx-ct-a-alpha-inverse-effect.h  (+776 more)
src/: pptx-any.c  pptx-common.c  pptx-ct-a-adj-point-2d.c  pptx-ct-a-adjust-handle-list.c  pptx-ct-a-alpha-bi-level-effect.c  pptx-ct-a-alpha-ceiling-effect.c  pptx-ct-a-alpha-floor-effect.c  pptx-ct-a-alpha-inverse-effect.c  pptx-ct-a-alpha-modulate-effect.c  pptx-ct-a-alpha-modulate-fixed-effect.c  pptx-ct-a-alpha-outset-effect.c  pptx-ct-a-alpha-replace-effect.c  pptx-ct-a-angle.c  pptx-ct-a-animation-chart-build-properties.c  pptx-ct-a-animation-chart-element.c  pptx-ct-a-animation-dgm-build-properties.c  pptx-ct-a-animation-dgm-element.c  pptx-ct-a-animation-element-choice.c  pptx-ct-a-animation-graphical-object-build-properties.c  pptx-ct-a-area-3dchart.c  pptx-ct-a-area-chart.c  pptx-ct-a-area-ser.c  pptx-ct-a-audio-cd.c  pptx-ct-a-audio-cdtime.c  pptx-ct-a-audio-file.c  pptx-ct-a-ax-data-source.c  pptx-ct-a-ax-pos.c  pptx-ct-a-axis-unit.c  pptx-ct-a-backdrop.c  pptx-ct-a-background-fill-style-list.c  pptx-ct-a-background-formatting.c  pptx-ct-a-band-fmt.c  pptx-ct-a-band-fmts.c  pptx-ct-a-bar-3dchart.c  pptx-ct-a-bar-chart.c  pptx-ct-a-bar-dir.c  pptx-ct-a-bar-grouping.c  pptx-ct-a-bar-ser.c  pptx-ct-a-base-styles-override.c  pptx-ct-a-base-styles.c  (+744 more)
